--- a/index.html
+++ b/index.html
@@ -7,7 +7,9 @@
     <title>Document</title>
 </head>
 <body>
-    <header class="header"></header>
+    <header class="header">
+        <h1>Evgeniy Lebedevsky</h1>
+    </header>
     <main class="main"></main>
     <footer class="footer"></footer>
 </body>
